# esm-mlx

./: .gitignore  LICENSE  README.md  __init__.py  benchmark.py  check_equivalence.py  convert_weights.py  heads.py  layers.py  model.py  pyproject.toml  test_equivalence.py  tokenizer.py
esm_mlx/: __init__.py  heads.py  layers.py  model.py  tokenizer.py
scripts/: make_benchmark_chart.py
tests/: test_weight_rename.py
